--- a/src/Containers/Navbar/Navbar.css
+++ b/src/Containers/Navbar/Navbar.css
@@ -48,23 +48,6 @@
   justify-content: flex-end;
 }
 
-@media screen and (max-width: 850px) {
-  .app__navbar-smallscreen {
-    display: flex;
-    position: relative;
-  }
-  .app__navbar-links {
-    display: none;
-  }
-  .app__navbar {
-    padding: 0 8rem;
-  }
-  .M {
-    position: fixed;
-    z-index: 5;
-  }
-}
-
 /* ------------------- */
 
 .app__navbar-smallscreen_overlay {
@@ -143,8 +126,50 @@
   right: 135px;
 }
 
+@media screen and (max-width: 850px) {
+  .app__navbar-smallscreen {
+    display: flex;
+    position: relative;
+  }
+  .app__navbar-links {
+    display: none;
+  }
+  .app__navbar {
+    padding: 0 8rem;
+  }
+  .M {
+    position: fixed;
+    z-index: 5;
+  }
+}
+
 @media screen and (max-width: 650px) {
+  .app__navbar {
+    padding: 0 4rem;
+  }
   .app__navbar-links_smallscreen li a {
     padding: 0;
   }
+  .app__navbar-smallscreen_overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(
+      274deg,
+      rgba(171, 217, 217, 1) 0%,
+      rgba(76, 76, 214, 1) 92.72%
+    );
+    z-index: 5;
+    clip-path: circle(25px at calc(100% - 80px) 33px);
+    transition: all 0.8s ease-in-out;
+  }
+  .app__navbar-smallscreen_overlay .overlay__close {
+    right: 70px;
+  }
+}
+
+.active {
+  clip-path: circle(75%);
 }
