fixed the navbar overlay not taking the full page

--- a/src/Containers/Navbar/Navbar.css
+++ b/src/Containers/Navbar/Navbar.css
@@ -155,7 +155,7 @@
     top: 0;
     left: 0;
     width: 100%;
-    height: 100vh;
+    height: 100dvh;
     background: linear-gradient(
       274deg,
       rgba(171, 217, 217, 1) 0%,
